samples/_failures_safe/1761731340_c5c465_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06bbee94.c: In function ‘main’:
./samples/SAFE/__tmp_06bbee94.c:153:5: error: expected declaration or statement at end of input
  153 |     for (size_t i = 0; i < compressed_size; i++) {
      |     ^~~
./samples/SAFE/__tmp_06bbee94.c:153:5: error: expected declaration or statement at end of input
